move to gradle modules